Fix the page's SSL status not being set on restore.

This regressed in r415186.

Also fix it for same page navigations (i.e. user pressing enter in omnibox) since the URL might change there if the server redirects.

BUG=642838
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_site_isolation

Review-Url: https://codereview.chromium.org/2299843002
Cr-Commit-Position: refs/heads/master@{#415977}

Former-commit-id: d208b90ce731f26eaadf615e082b269d753ba2d3